# gnupg

./: .git-blame-ignore-revs  .gitignore  .travis.yml  ABOUT-NLS  AUTHORS  BUGS  COPYING  COPYING.CC0  COPYING.LGPL21  COPYING.LIB  COPYING.other  ChangeLog  ChangeLog-2011  INSTALL  Makefile.am  Makefile.in  NEWS  NOTES  OBUGS  PROJECTS  README  README-alpha  README.GIT  README.SVN  README.maint  THANKS  THOUGHTS  TODO  VERSION  acconfig.h  acinclude.m4  aclocal.m4  announce.txt  autogen.rc  autogen.sh  build-w32.sh  config.h.in  configure.ac  configure.in  gnupg.txt  (+2 more)
agent/: ChangeLog  ChangeLog-2011  Makefile.am  TODO  agent.h  all-tests.scm  buffer.c  buffer.h  cache.c  call-daemon.c  call-pinentry.c  call-scd.c  call-tkd.c  call-tpm2d.c  command-ssh.c  command.c  cvt-openpgp.c  cvt-openpgp.h  divert-scd.c  divert-tkd.c  divert-tpm2.c  estream.c  estream.h  findkey.c  genkey.c  gpg-agent-w32info.rc  gpg-agent.c  gpg-agent.w32-manifest.in  gpg-stream-config.h  gpg-stream.c  gpg-stream.h  keyformat.txt  learncard.c  minip12.c  minip12.h  pkdecrypt.c  pksign.c  preset-passphrase.c  protect-tool.c  protect.c  (+12 more)
assuan/: ChangeLog  Makefile.am  assuan-buffer.c  assuan-client.c  assuan-connect.c  assuan-defs.h  assuan-handler.c  assuan-inquire.c  assuan-io.c  assuan-listen.c  assuan-pipe-connect.c  assuan-pipe-server.c  assuan-socket-connect.c  assuan-socket-server.c  assuan-util.c  assuan.h  mkerrors
bzlib/: CHANGES  Makefile.am  README  README.1st  bzlib.h
checks/: ChangeLog  ChangeLog-2011  Makefile.am  armdetach.test  armdetachm.test  armencrypt.test  armencryptp.test  armor.test  armsignencrypt.test  armsigs.test  challenge-1  checkit  clearsig.test  conventional-mdc.test  conventional.test  decrypt-dsa.test  decrypt.test  defs.inc  detach.test  detachm.test  distfiles  encrypt-dsa.test  encrypt.test  encryptp.test  genkey1024.test  gnupg.asc  mds.test  mkdemodirs  multisig.test  options.in  plain-1.asc  plain-2.asc  plain-3.asc  pubring.asc  pubring.g10  run-gpg  run-gpg.patterns  run-gpgm  seat.test  secdemo.asc  (+9 more)
cipher/: ChangeLog  ChangeLog-2011  Makefile.am  Makefile.in  algorithms.h  arcfour.c  arcfour.h  bithelp.h  blowfish.c  blowfish.h  camellia-glue.c  camellia.c  camellia.h  cast5.c  cast5.h  cipher.c  des.c  des.h  dsa.c  dsa.h  dynload.c  dynload.h  elgamal.c  elgamal.h  g10c.c  gost.c  gost.h  idea-stub.c  idea.c  idea.h  md.c  md.h  md5.c  md5.h  misc.c  primegen.c  pubkey.c  rand-dummy.c  rand-internal.h  rand-unix.c  (+22 more)
common/: ChangeLog  ChangeLog-2011  ChangeLog-2011.include  ChangeLog.jnlib  Makefile.am  README  README.jnlib  agent-opt.c  all-tests.scm  argparse.c  argparse.h  asshelp.c  asshelp.h  asshelp2.c  audit.c  audit.h  b64dec.c  b64enc.c  call-gpg.c  call-gpg.h  ccparray.c  ccparray.h  common-defs.h  comopt.c  comopt.h  compliance.c  compliance.h  convert.c  cryptmiss.c  dlfcn.h  dns-cert.c  dns-cert.h  dotlock.c  dotlock.h  dynload.h  errors.h  estream-printf.c  estream-printf.h  estream.c  estream.h  (+163 more)
dirmngr/: ChangeLog  ChangeLog-2011  ChangeLog-2011-ks  ChangeLog.1  Makefile.am  OAUTHORS  ONEWS  b64dec.c  b64enc.c  cdb.h  cdblib.c  certcache.c  certcache.h  crlcache.c  crlcache.h  crlfetch.c  crlfetch.h  dirmngr-client-w32info.rc  dirmngr-client.c  dirmngr-client.w32-manifest.in  dirmngr-err.h  dirmngr-status.h  dirmngr-w32info.rc  dirmngr.c  dirmngr.h  dirmngr.w32-manifest.in  dirmngr_ldap-w32info.rc  dirmngr_ldap.c  dirmngr_ldap.w32-manifest.in  dns-cert.c  dns-cert.h  dns-stuff.c  dns-stuff.h  dns.c  dns.h  domaininfo.c  fakecrl.c  get-path.c  http-common.c  http-common.h  (+44 more)
doc/: ChangeLog  ChangeLog-2011  DCO  DETAILS  FAQ  HACKING  KEYSERVER  Makefile.am  Notes  OpenPGP  README.W32  TRANSLATE  a-decade-of-gnupg.txt  ad-query-hints.org  announce-2.0.txt  announce-2.1.txt  assuan.texi  card-tool.texi  com-certs.pem  contrib.texi  credits-1.0  credits-1.2  debugging.texi  detached-sig-verification-bug.txt  dirmngr.texi  embedded-sig-verification-bug.txt  faq.org  faq.raw  fdl.texi  gcryptref-cipher.sgml  gcryptref-digest.sgml  gcryptref-misc.sgml  gcryptref-pubkey.sgml  gcryptref.sgml  glossary.texi  gnupg-badge-openpgp.eps  gnupg-card-architecture.fig  gnupg-logo.eps  gnupg-w32.reg  gnupg.7  (+61 more)
g10/: ChangeLog  ChangeLog-2011  Makefile.am  Makefile.in  OPTIONS  all-tests.scm  apdu.c  apdu.h  app-common.h  app-openpgp.c  armor.c  basicdefs.h  build-packet.c  call-agent.c  call-agent.h  call-dirmngr.c  call-dirmngr.h  call-keyboxd.c  card-util.c  cardglue.c  cardglue.h  ccid-driver.c  ccid-driver.h  checksig.c  cipher-aead.c  cipher-cfb.c  cipher.c  cipher.h  comment.c  compress-bz2.c  compress.c  compressed.c  cpr.c  dearmor.c  decrypt-data.c  decrypt.c  dek.h  delkey.c  dirmngr-conf.skel  distsigkey.gpg  (+135 more)
g13/: ChangeLog  ChangeLog-2011  Makefile.am  all-tests.scm  backend.c  backend.h  be-dmcrypt.c  be-dmcrypt.h  be-encfs.c  be-encfs.h  be-truecrypt.c  be-truecrypt.h  call-gpg.c  call-gpg.h  call-syshelp.c  call-syshelp.h  create.c  create.h  encfs-1.5_annotate.diff  encfs-1.7.3_annotate.diff  g13-common.c  g13-common.h  g13-syshelp.c  g13-syshelp.h  g13.c  g13.h  g13tuple.c  g13tuple.h  keyblob.c  keyblob.h  mount.c  mount.h  mountinfo.c  mountinfo.h  runner.c  runner.h  server.c  server.h  sh-blockdev.c  sh-cmd.c  (+7 more)
jnlib/: ChangeLog  ChangeLog-2011  Makefile.am  README  argparse.c  argparse.h  dotlock.c  dotlock.h  dynload.h  libjnlib-config.h  logging.c  logging.h  mischelp.c  mischelp.h  stringhelp.c  stringhelp.h  strlist.c  strlist.h  t-stringhelp.c  t-support.c  t-support.h  t-timestuff.c  t-w32-reg.c  types.h  utf8conv.c  utf8conv.h  w32-afunix.c  w32-afunix.h  w32-gettext.c  w32-pth.c  w32-pth.h  w32-reg.c  w32help.h  xmalloc.c  xmalloc.h
kbx/: ChangeLog  ChangeLog-2011  Makefile.am  Manifest  backend-cache.c  backend-kbx.c  backend-sqlite.c  backend-support.c  backend.h  frontend.c  frontend.h  kbx-client-util.c  kbx-client-util.h  kbxserver.c  kbxutil.c  keybox-blob.c  keybox-defs.h  keybox-dump.c  keybox-errors.c  keybox-file.c  keybox-fwddecl.h  keybox-init.c  keybox-openpgp.c  keybox-search-desc.h  keybox-search.c  keybox-util.c  (+7 more)
(+1193 files in other folders)
